--- a/client/src/index.css
+++ b/client/src/index.css
@@ -323,7 +323,8 @@ body {
 }
 
 .trainPage form input[type="text"],
-.trainPage form input[type="number"] {
+.trainPage form input[type="number"],
+.trainPage form input[type="password"] {
     width: 100%;
     outline: none;
     border: 1px solid #525151;
@@ -332,7 +333,8 @@ body {
 }
 
 .trainPage form input[type="text"]:focus,
-.trainPage form input[type="number"]:focus {
+.trainPage form input[type="number"]:focus,
+.trainPage form input[type="password"]:focus {
     border: 4px solid #525151;
 }
 
@@ -355,8 +357,12 @@ body {
     border: 2px solid orange;
 }
 
-@media screen and (max-width: 700px) {
+.trainPage p a {
+    color: #525151;
+    font-weight: 600;
+}
 
+@media screen and (max-width: 700px) {
     .trainPage form,
     .trainPage p {
         width: 80%;
