--- a/client/src/index.css
+++ b/client/src/index.css
@@ -324,6 +324,7 @@ body {
 
 .trainPage form input[type="text"],
 .trainPage form input[type="number"],
+.trainPage form input[type="email"],
 .trainPage form input[type="password"] {
     width: 100%;
     outline: none;
@@ -334,6 +335,7 @@ body {
 
 .trainPage form input[type="text"]:focus,
 .trainPage form input[type="number"]:focus,
+.trainPage form input[type="email"]:focus,
 .trainPage form input[type="password"]:focus {
     border: 4px solid #525151;
 }
