--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap');
+
 
 * {
     margin: 0;
@@ -13,636 +15,208 @@ body {
     height: 100vh;
     font-family: "Roboto", sans-serif;
     overflow-x: hidden;
-}
-
-.notFound {
-    color: #525151;
-    margin-bottom: 20px;
+    background: linear-gradient(112.01deg, #181818 0.6%, rgba(32, 32, 32, 0.966251) 34.35%, rgba(24, 24, 24, 0.905882) 99.4%);
 }
 
 .page {
     min-height: 100vh;
     height: auto;
-    padding: 6rem 0px 50px 0px;
 }
 
-/* Header Starts */
-/* .nav {
-    height: 50px;
-    width: 100%;
-    background-color: #525151;
-    display: flex;
-    justify-content: space-around;
-    padding: 0px 20px;
-    z-index: 999;
-}
-
-.nav .logo {
-    line-height: 50px;
-    font-size: 24px;
-    letter-spacing: 2px;
-    color: #FFFFFF;
-}
-
-.nav ul {
-    display: flex;
-    justify-content: center;
-    line-height: 40px;
-}
-
-.nav ul li {
-    margin: 0px 10px;
-    padding: 0px 10px;
-    height: 90%;
-    line-height: 50px;
-    transition: all 0.2s ease;
-}
-
-.nav ul li.active,
-.nav ul li:hover {
-    border-bottom: 4px solid #FFFFFF;
-}
-
-.nav ul li .logout_btn {
-    background-color: transparent;
-    outline: none;
-    border: none;
+.btn {
     cursor: pointer;
 }
 
-.nav ul li a,
-.nav ul li .logout_btn {
-    font-size: 16px;
-    font-weight: normal;
-    letter-spacing: 1px;
-    color: #FFFFFF;
-}
+/* Dashborad page */
 
-#check {
-    display: none;
-}
-
-.nav .fa {
-    position: absolute;
-    right: 20px;
-    top: 10px;
-    color: #fcfcfc;
-    font-size: 28px;
-    cursor: pointer;
-    display: none;
-}
-
-@media screen and (max-width: 800px) {
-    .nav {
-        flex-direction: column;
-    }
-
-    .nav .logo {
-        text-align: center;
-    }
-
-    .nav ul {
-        display: block;
-        background-color: rgba(212, 212, 212);
-        flex-direction: column;
-        position: absolute;
-        text-align: center;
-        top: 60px;
-        right: -100%;
-        height: auto;
-        width: 40%;
-        transition: all 1s ease-in-out;
-    }
-
-    .nav .fa {
-        display: block;
-    }
-
-    #check:checked~ul {
-        right: 10px;
-    }
-
-    .nav ul li {
-        line-height: 60px;
-    }
-
-    .nav ul li.active,
-    .nav ul li:hover {
-        border-bottom: none;
-    }
-
-    .nav ul li a,
-    .nav ul li .logout_btn {
-        color: rgb(43, 42, 42);
-        font-size: 20px;
-        letter-spacing: 0.8px;
-    }
-
-    .nav ul li:hover a,
-    .nav ul li:hover .logout_btn {
-        color: #FFFFFF;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .nav ul {
-        width: 50%;
-    }
-} */
-
-/* Header Ends */
-
-/* Navbar */
-nav {
-    height: 60px;
-    width: 100%;
-    background-color: #525151;
-    position: fixed;
-    top: 0;
-    z-index: 9999;
-    left: 0;
-  }
-  
-  .logo {
-    width: auto;
-    float: left;
-    line-height: 60px;
-    margin: 0px 0px 0px 20px;
-    color: #fcfcfc;
-  }
-  
-  nav ul {
-    float: right;
-  }
-  
-  nav ul li {
-    display: inline-block;
-    line-height: 60px;
-  }
-
-  nav ul li .logout_btn {
-    background-color: transparent;
-    outline: none;
-    border: none;
-    cursor: pointer;
-  }
-  
-  nav ul li a,
-  nav ul li .logout_btn {
-    font-size: 1.1rem;
-    margin-right: 12px;
-    padding: 10px;
-    color: #fcfcfc;
-    font-weight: 400;
-    letter-spacing: 1.1px;
-  }
-  
-  nav ul li a:hover,
-  nav ul li .logout_btn:hover {
-    border-bottom: 2px solid #fcfcfc;
-  }
-  
-  .checkbtn {
-    color: #fcfcfc;
-    font-size: 30px;
-    float: right;
-    margin: 14px 20px 0px 20px;
-    cursor: pointer;
-    display: none;
-  }
-  
-  .overlay {
-    display: none;
-  }
-
-  #check {
-    display: none;
-  }
-  
-  @media screen and (max-width:972px) {
-    nav ul {
-      position: absolute;
-      height: auto;
-      width: 40%;
-      margin: 0px 0px;
-      top: 80px;
-      right: -40%;
-      text-align: center;
-      background-color: #525151;
-      transition: all 0.6s ease-out;
-      z-index: 1000;
-      box-shadow: inset 2px 2px 5px 1px var(--color2), inset -2px -2px 40px 1px var(--color2);
-      border-radius: 5px;
-      z-index: 2;
-    }
-  
-    nav ul li {
-      display: block;
-      line-height: 4rem;
-    }
-  
-    nav ul li a {
-      font-size: 1.2rem;
-    }
-    
-    nav ul li a:hover {
-      color: var(--main);
-      background-color: transparent;
-      border: none;
-    }
-  
-    .checkbtn {
-      display: inline-block;
-    }
-  
-    .overlay {
-      width: 100%;
-      height: 100vh;
-      position: absolute;
-      top: 60px;
-      left: 0;
-      right: 0;
-    }
-  
-    #check:checked~ul {
-      right: 10px;
-    }
-  
-    #check:checked~.overlay {
-      display: block;
-    }
-  }
-  
-  @media screen and (max-width: 500px) {
-    nav ul {
-      width: 70%;
-      right: -70%;
-    }
-  }
-
-/* Message */
-.msg_container {
+.hero_page {
     width: 100vw;
-    height: auto;
-    padding: 20px;
-    border: 4px solid #024b02;
-    background-color: #7ef37e;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.hero_page header {
+    background-color: #484848;
+    width: 85%;
+    height: 70px;
+    overflow: hidden;
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    align-items: center;
-    position: absolute;
-    top: 60px;
-    z-index: 999;
+    margin: 20px auto 0px;
+    padding: 0px 20px;
+    border-radius: 20px;
+    backdrop-filter: blur(26.399999618530273px);
+    box-shadow: 0px 4px 4px 0px #C9C9C940;
 }
 
-.msg_container .msg {
-    color: #024b02;
+.hero_page header .logo_container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.hero_page header .logo_container .logo_title {
+    color: #fcfcfc;
+    font-family: "Sofadi One", system-ui;
     font-weight: 400;
 }
 
-.msg_container button {
-    color: #024b02;
-    border: 2px solid #024b02;
-    background-color: #7ef37e;
-    font-size: 14px;
-    padding: 10px;
-    font-weight: 600;
+.hero_page header .logo_container .logo {
+    width: 35px;
+    height: auto;
 }
 
-/* Dashboard Table */
-.tablePage {
+.hero_page header nav ul {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.tablePage form {
-    width: auto;
-    display: flex;
-    flex-direction: column;
-}
-
-.tablePage form input {
-    padding: 4px 12px;
-}
-
-.tablePage form input:focus {
-    outline: none;
-    outline: 2px solid #2b2b2b;
-    outline-offset: 2px;
-}
-
-.tablePage form .btn {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    margin: 10px auto 20px;
-}
-
-.tablePage form .btn input[type="submit"],
-.tablePage form .btn button {
-    font-size: 0.8rem;
-    background-color: #525151;
-    color: #fcfcfc;
-    padding: 4px 20px;
-    border: none;
-    outline: none;
-    border-radius: 4px;
-}
-
-.tablePage table {
-    width: 60vw;
-    border-collapse: collapse;
-    overflow-x: auto;
-    overflow-y: hidden;
-}
-
-.tablePage .filterTable {
-    margin-bottom: 30px;
-}
-
-.tablePage table thead {
-    background-color: #525151;
-}
-
-.tablePage table thead tr {
-    height: 40px;
-}
-
-.tablePage table thead tr th {
-    color: #fcfcfc;
-    font-weight: 400;
-}
-
-.tablePage table tbody tr {
-    border-bottom: 1px solid #525151;
-}
-
-.tablePage table tbody tr td {
-    padding: 10px 20px;
-}
-
-@media screen and (max-width: 800px) {
-    .tablePage table {
-        overflow-x: scroll;
-        display: block;
-        width: 360px;
-        margin: 0px 4rem;
-    }
-}
-
-/* attendance Page */
-.attendancePage {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.attendancePage .btn {
-    width: 40vw;
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 20px;
-}
-
-.attendancePage .btn button,
-.attendancePage button {
-    background-color: #525151;
-    color: #fcfcfc;
-    font-size: 16px;
-    padding: 8px 24px;
-    border: none;
-    outline: none;
-    border-radius: 5px;
-}
-
-.attendancePage table {
-    width: 40vw;
-    border-collapse: collapse;
-    margin-bottom: 40px;
-}
-
-.attendancePage table tbody tr {
-    height: 40px;
-    border: 2px solid #525151;
-}
-
-.attendancePage table tbody tr th {
-    text-align: center;
-    width: 50%;
-    background-color: #525151;
-    color: #fcfcfc;
-    font-weight: 400;
-}
-
-.attendancePage table tbody tr td {
-    text-align: center;
-}
-
-@media screen and (max-width: 700px) {
-
-    .tablePage table,
-    .attendancePage table {
-        width: 90%;
-    }
-}
-
-/* Train Page */
-.trainPage {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.trainPage form {
-    width: 30vw;
-    display: flex;
-    flex-direction: column;
     gap: 20px;
-    margin-bottom: 20px;
-}
-
-.trainPage form .form_group {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.trainPage form .form_group label {
-    color: #2b2b2b;
-    font-size: 1rem;
-}
-
-.trainPage form input[type="text"],
-.trainPage form input[type="number"],
-.trainPage form input[type="email"],
-.trainPage form input[type="password"] {
-    width: 100%;
-    outline: none;
-    border: 1px solid #525151;
-    border-radius: 4px;
-    padding: 4px 10px;
-}
-
-.trainPage form input[type="text"]:focus,
-.trainPage form input[type="number"]:focus,
-.trainPage form input[type="email"]:focus,
-.trainPage form input[type="password"]:focus {
-    border: 4px solid #525151;
-}
-
-.trainPage form input[type="submit"] {
-    background-color: #525151;
-    color: #fcfcfc;
-    font-size: 16px;
-    padding: 8px 24px;
-    border: none;
-    outline: none;
-    border-radius: 5px;
-}
-
-.trainPage p {
-    width: 30vw;
-    background-color: rgb(255, 255, 164);
-    padding: 10px 20px;
-    line-height: 26px;
-    color: orange;
-    border: 2px solid orange;
-}
-
-.trainPage p a {
-    color: #525151;
-    font-weight: 600;
-}
-
-@media screen and (max-width: 700px) {
-
-    .trainPage form,
-    .trainPage p {
-        width: 80%;
-    }
-}
-
-/* Footer Starts */
-footer {
-    width: 100%;
-    height: 100px;
-    display: flex;
     justify-content: center;
     align-items: center;
 }
 
-footer p {
-    font-size: 20px;
-    color: #8d8d8d;
-}
-
-footer p .fa {
-    margin: 0;
-    font-size: 20px;
-    width: 20px;
-    padding: 0;
-    color: #8d8d8d;
-}
-
-footer p .company {
-    color: #2b2b2b;
-}
-
-@media screen and (max-width: 900px) {
-    footer p {
-        line-height: 40px;
-    }
-
-    footer p .company {
-        display: block;
-        text-align: center;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    footer p {
-        font-size: 18px;
-        line-height: 40px;
-    }
-
-    footer p .fa {
-        font-size: 18px;
-        width: 18px;
-    }
-}
-
-/* Footer Ends */
-
-/* Profiles Page */
-.profilesPage {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.profilesPage form {
-    width: 360px;
-    display: flex;
-    gap: 10px;
-}
-
-.profilesPage form input[type="text"] {
-    width: 100%;
-    outline: none;
-    border: 1px solid #525151;
-    border-radius: 4px;
-    padding: 4px 10px;
-}
-
-.profilesPage form input[type="submit"] {
-    font-size: 1rem;
-    background-color: #525151;
+.hero_page header nav ul li a {
+    font-size: 1.1rem;
+    font-weight: 400;
     color: #fcfcfc;
-    padding: 4px 20px;
+    font-family: "Sofadi One", system-ui;
+}
+
+.hero_page header nav ul li a .btn {
     border: none;
     outline: none;
-    border-radius: 4px;
-}
-
-.profilesPage form input[type="text"]:focus {
-    border: 4px solid #525151;
-}
-
-.profilesPage .profile {
-    width: auto;
-    display: flex;
-    height: auto;
-    margin-top: 50px;
-    gap: 20px;
-}
-
-.profilesPage .profile .image .img {
-    width: 200px;
-    height: auto;
+    font-size: 1.1rem;
+    font-weight: 400;
+    padding: 8px 28px;
+    font-family: "Sofadi One", system-ui;
     border-radius: 10px;
 }
 
-.profilesPage .profile table tr th,
-.profilesPage .profile table tr td {
-    padding: 4px 20px;
+.hero_page header nav ul li a .pricing_btn {
+    background-color: #757575;
+    color: #fcfcfc;
 }
 
-@media screen and (max-width: 800px) {
-    form {
-        width: 360px;
-        display: flex;
-        flex-direction: column;
-        padding: 20px;
+.hero_page header nav ul li a .discover_btn {
+    background-color: #fcfcfc;
+    color: #757575;
+}
+
+.hero_page .main_container {
+    width: 100vw;
+    height: 85vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero_page .main_container .container {
+    width: 45vw;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 40px;
+    position: relative;
+    animation: dashboard_animation 1s linear;
+}
+
+@keyframes dashboard_animation {
+    0% {
+        height: 0px;
+        overflow: hidden;
+    }
+
+    100% {
+        width: 45vw;
+        height: 50vh;
+        overflow: visible;
     }
 }
 
-@media screen and (max-width: 800px) {
-    .profilesPage .profile {
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-    }
+.hero_page .main_container .container .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero_page .main_container .container .content h1,
+.hero_page .main_container .container .content p {
+    color: #fcfcfc;
+    width: 100%;
+    text-align: center;
+    font-weight: 300;
+}
+
+.hero_page .main_container .container .content .hero_title {
+    font-size: 4rem;
+}
+
+.hero_page .main_container .container .content .hero_title span {
+    background: -webkit-linear-gradient(180deg, rgba(12, 0, 212, 1) 0%, rgba(255, 51, 247, 1) 100%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.hero_page .main_container .container .content .hero_content {
+    width: 90%;
+    font-weight: 200;
+    text-align: justify;
+    line-height: 25px;
+    margin-top: 10px;
+}
+
+.hero_page .main_container .container .button .btn {
+    background-color: #D9D9D9;
+    color: #484848;
+    width: 28vw;
+    height: auto;
+    padding: 16px 0px;
+    gap: 10px;
+    border-radius: 30px;
+    opacity: 0px;
+    font-size: 1.1rem;
+    font-weight: 400;
+    letter-spacing: 1px;
+    bottom: none;
+    outline: none;
+}
+
+.hero_page .ellipse {
+    width: 100vw;
+    height: 100vh;
+    border-radius: 50%;
+    box-shadow: #8948E4E5 0px 0px 100px 10px;
+    margin-top: 10px;
+}
+
+.hero_page .main_container .container .img1, 
+.hero_page .main_container .container .img2, 
+.hero_page .main_container .container .img3, 
+.hero_page .main_container .container .img4 {
+    position: absolute;
+    width: 10rem;
+    height: auto;
+}
+
+.hero_page .main_container .container .img1 {
+    top: -5rem;
+    left: -8rem;
+}
+
+.hero_page .main_container .container .img2 {
+    top: -5rem;
+    right: -8rem;
+    transform: rotate(180deg);
+}
+
+.hero_page .main_container .container .img3 {
+    bottom: -5rem;
+    left: -8rem;
+}
+
+.hero_page .main_container .container .img4 {
+    bottom: -5rem;
+    right: -8rem;
 }
