--- a/client/src/index.css
+++ b/client/src/index.css
@@ -598,6 +598,17 @@ header nav ul li a .discover_btn {
     margin-top: 20px;
 }
 
+.delete-worker-btn {
+    margin: 20px 0px 0px;
+    padding: 6px 16px;
+    background-color: red;
+    color: #fcfcfc;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+    float: right;
+}
+
 /* Profile Page */
 .page.profilesPage {
     color: #ffffff;
@@ -612,7 +623,7 @@ header nav ul li a .discover_btn {
     background-color: #2d2d3a;
     padding: 20px;
     border-radius: 8px;
-    width: 60%;
+    width: auto;
     margin: 20px auto;
     gap: 4rem;
     display: flex;
